--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,7 @@ repos:
     rev: 6.0.0
     hooks:
       - id: flake8
+        args: [--max-line-length=99]
 #  - repo: local
 #    hooks:
 #      - id: testing
